--- a/registro-usuarios/src/main/resources/static/profile.html
+++ b/registro-usuarios/src/main/resources/static/profile.html
@@ -297,7 +297,7 @@
         }
 
         function redirectToLogin() {
-            //window.location.href = '/login.html';
+            window.location.href = '/login.html';
         }
 
         function logout() {
