--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -36,11 +36,12 @@
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <nav class="bg-white navbar navbar-expand shadow mb-4 topbar static-top navbar-light">
+                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group"></div>
-                        </form><ul class="navbar-nav flex-nowrap ms-auto">
+                        </form>
+                        <ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                 <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
                                     <form class="me-auto navbar-search w-100">
@@ -120,7 +121,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Pedro Cuadrado</span><img class="border rounded-circle img-profile" src="assets/img/ELPEDRO.png"></a>
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small" id="userName">Cargando...</span><img class="border rounded-circle img-profile" src="" id="userImage"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
@@ -128,8 +129,7 @@
                             </li>
                         </ul>
                     </div>
-                </nav>
-                <div class="container-fluid">
+                </nav> <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h3 class="text-dark mb-0">Tablero</h3>
                     </div>
@@ -255,9 +255,106 @@
             </footer>
         </div><a class="d-inline border rounded scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const token = localStorage.getItem('jwtToken');
+            if (token) {
+                fetchUserData(token);
+            } else {
+                redirectToLogin();
+            }
+        });
+
+        function fetchUserData(token) {
+            const userId = getUserIdFromToken(token);
+            console.log("UserID from token:", userId); // Debug: Verifica que el ID se extrae correctamente
+            if (userId) {
+                fetch(`/users/auth/${userId}`, {
+                    method: 'GET',
+                    headers: {
+                        "Authorization": `Bearer ${token}`,
+                        "Content-Type": "application/json"
+                    }
+                })
+                    .then(response => {
+                        console.log("Server response:", response); // Debug: Muestra la respuesta del servidor
+                        if (response.ok) {
+                            return response.json();
+                        } else if (response.status === 401) {
+                            redirectToLogin(); // Redirigir al inicio de sesión si el token expiró
+                        } else {
+                            throw new Error(`Failed to fetch user data: ${response.status} ${response.statusText}`);
+                        }
+                    })
+                    .then(data => {
+                        console.log("User data received:", data); // Debug: Muestra los datos recibidos
+                        if (data) {
+                            document.getElementById('userName').textContent = data.firstName + ' ' + data.lastName;
+                            document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching user data:', error);
+                        document.getElementById('userName').textContent = "Error loading data";
+                        redirectToLogin();
+                    });
+            } else {
+                console.error('No user ID found in token');
+                document.getElementById('userName').textContent = "Error loading data"; // Mostrar mensaje de error en la UI
+            }
+        }
+
+        function getUserIdFromToken(token) {
+            try {
+                const base64Url = token.split('.')[1];
+                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                const jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
+                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                }).join(''));
+                const decodedToken = JSON.parse(jsonPayload);
+                return decodedToken.sub; // Assuming 'sub' contains user ID
+            } catch (e) {
+                console.error('Error decoding token:', e);
+                return null;
+            }
+        }
+
+        function redirectToLogin() {
+            window.location.href = '/login.html';
+        }
+
+        function logout() {
+            localStorage.removeItem('jwtToken');
+            redirectToLogin();
+        }
+
+        document.getElementById('imageInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const formData = new FormData();
+                formData.append('image', file);
+
+                fetch(`/users/auth/update-image/${getUserIdFromToken(localStorage.getItem('jwtToken'))}`, {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        "Authorization": `Bearer ${localStorage.getItem('jwtToken')}`,
+                    }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.imageUrl) {
+                        document.getElementById('profileImage').src = data.imageUrl;
+                        document.getElementById('userImage').src = data.imageUrl;
+                        alert('Imagen actualizada correctamente.');
+                    }
+                })
+                .catch(error => console.error('Error uploading image:', error));
+            }
+        });
+    </script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/theme.js"></script>
+    <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
