--- a/registro-usuarios/src/main/resources/static/table.html
+++ b/registro-usuarios/src/main/resources/static/table.html
@@ -36,11 +36,12 @@
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <nav class="bg-white navbar navbar-expand shadow mb-4 topbar static-top navbar-light">
+                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
                             <div class="input-group"></div>
-                        </form><ul class="navbar-nav flex-nowrap ms-auto">
+                        </form>
+                        <ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                 <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
                                     <form class="me-auto navbar-search w-100">
@@ -119,32 +120,16 @@
                                 <div class="shadow dropdown-list dropdown-menu dropdown-menu-end" aria-labelledby="alertsDropdown"></div>
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
-                            <li class="nav-item dropdown no-arrow" id="userProfileDropdown">
-                                <!-- Placeholder for user name and image -->
-                                <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown"
-                                    href="#">
-                                    <span class="d-none d-lg-inline me-2 text-gray-600 small"
-                                        id="userName">Cargando...</span>
-                                    <img class="border rounded-circle img-profile" id="userImage"
-                                        src="assets/img/default.png">
-                                </a>
-                                <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
-                                    <a class="dropdown-item" href="#"><i
-                                            class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a>
-                                    <a class="dropdown-item" href="#"><i
-                                            class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a>
-                                    <a class="dropdown-item" href="#"><i
-                                            class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity
-                                        log</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#" onclick="logout()"><i
-                                            class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
+                            <li class="nav-item dropdown no-arrow">
+                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small" id="userName">Cargando...</span><img class="border rounded-circle img-profile" src="" id="userImage"></a>
+                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
+                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
+                                    </div>
                                 </div>
                             </li>
                         </ul>
                     </div>
-                </nav>
-                <div class="container-fluid">
+                </nav><div class="container-fluid">
                     <h3 class="text-dark mb-4">Usuarios</h3>
                     <div class="card shadow">
                         <div class="card-header py-3">
@@ -274,7 +259,44 @@
             let selectedSize = this.value;
             fetchUsers(token, selectedSize);
         });
-
+        function fetchUserData(token) {
+            const userId = getUserIdFromToken(token);
+            console.log("UserID from token:", userId); // Debug: Verifica que el ID se extrae correctamente
+            if (userId) {
+                fetch(`/users/auth/${userId}`, {
+                    method: 'GET',
+                    headers: {
+                        "Authorization": `Bearer ${token}`,
+                        "Content-Type": "application/json"
+                    }
+                })
+                    .then(response => {
+                        console.log("Server response:", response); // Debug: Muestra la respuesta del servidor
+                        if (response.ok) {
+                            return response.json();
+                        } else if (response.status === 401) {
+                            redirectToLogin(); // Redirigir al inicio de sesión si el token expiró
+                        } else {
+                            throw new Error(`Failed to fetch user data: ${response.status} ${response.statusText}`);
+                        }
+                    })
+                    .then(data => {
+                        console.log("User data received:", data); // Debug: Muestra los datos recibidos
+                        if (data) {
+                            document.getElementById('userName').textContent = data.firstName + ' ' + data.lastName;
+                            document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';    
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error fetching user data:', error);
+                        document.getElementById('userName').textContent = "Error loading data";
+                        redirectToLogin();
+                    });
+            } else {
+                console.error('No user ID found in token');
+                document.getElementById('userName').textContent = "Error loading data"; // Mostrar mensaje de error en la UI
+            }
+        }
         function fetchUsers(token, pageSize = 5) {  // Valor por defecto de 5
             fetch(`/users/table/list?pageSize=${pageSize}`, {  // Envía el tamaño de página como parámetro de consulta
                 method: 'GET',
@@ -369,9 +391,8 @@
             redirectToLogin();
         }
     </script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/theme.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/theme.js"></script>
 </body>
 
 </html>
