Retoques y encaminamos Roles

--- a/registro-usuarios/src/main/resources/static/FaQ.html
+++ b/registro-usuarios/src/main/resources/static/FaQ.html
@@ -138,7 +138,7 @@
                         <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="sectionOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSectionOne" aria-expanded="true" aria-controls="collapseSectionOne">
-                                    <i class="fas fa-school"></i>   Preguntas sobre el Centro
+                                    <i class="fas fa-school"></i>&nbsp;&nbsp;Preguntas sobre el Centro
                                 </button>
                             </h2>
                             <div id="collapseSectionOne" class="accordion-collapse collapse show" aria-labelledby="sectionOne" data-bs-parent="#sectionAccordion">
@@ -150,7 +150,7 @@
                                                     ¿Cuánto cuesta la matrícula de grado superior?
                                                 </button>
                                             </h2>
-                                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordionOne">
+                                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordionOne">
                                                 <div class="accordion-body">
                                                     El importe de la matrícula de grado superior es de 400€.
                                                 </div>
@@ -272,7 +272,7 @@
                         <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="sectionTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSectionTwo" aria-expanded="false" aria-controls="collapseSectionTwo">
-                                    <i class="fas fa-desktop"></i> Preguntas sobre la Plataforma
+                                    <i class="fas fa-desktop"></i>&nbsp;&nbsp;Preguntas sobre la Plataforma
                                 </button>
                             </h2>
                             <div id="collapseSectionTwo" class="accordion-collapse collapse" aria-labelledby="sectionTwo" data-bs-parent="#sectionAccordion">
